aws_cluster/k8s/templates/networkpolicies/Gate_api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gate-api
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: saleor-gateway-nginx
      ports:
        - protocol: TCP
          port: 8000
