aws_cluster/k8s/templates/networkpolicies/api-dns-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-dns-egress
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
 

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
