aws_cluster/k8s/templates/networkpolicies/api-postg-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-postg-egress
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres

      ports:
        - protocol: TCP
          port: 5432
