aws_cluster/k8s/templates/networkpolicies/api-redis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-redis-ingress
  namespace: saleor1
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
      ports:

        - protocol: TCP
          port: 6379
